--- a/src/components/person/person.scss
+++ b/src/components/person/person.scss
@@ -2,5 +2,6 @@
   padding: 1em;
   border: 1px solid #fff;
   margin: 1em;
-  background-color: darkred;
+  background-color: rgb(92, 89, 89);
+  color: yellow;
 }
